Ключевые интерфейсы были переброшены в FXEngine-Bridge для подключения работы движка с другими вспомогательными библиотеками